Added Page to record weight values. will be changing the 'converter' into a weight record-keeper. Will change fragment_weight.xml to reflect this. Will also change the Time Fragment to serve as a record-keeper of sorts for something else.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:theme="@style/Theme.LearningBottomNavigationBarKotlin"
         tools:targetApi="31">
         <activity
-            android:name=".EditTimeRecordActivity"
+            android:name=".time.EditTimeRecordActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".EditWeightRecordActivity"
+            android:name=".weight.EditWeightRecordActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
